# orbit

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  agent-rules.md  backlog.json  budget_manager.py  checkpoint_manager.py  command_runner.py  context_manager.py  dashboard.py  demo_fixtures.py  demo_media.py  demo_replay.py  diff_evaluator.py  evaluator.py  mission.md  observability.py  orchestrator.py  pr_helper.py  progress.md  pyproject.toml  replay.sh  resume_manager.py  retry_policy.py  reviewer.py  risk_guard.py  validation_runner.py  worktree_manager.py
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  demo_or_template.yml  feature_request.yml
.github/workflows/: ci.yml
adapters/: README.md  base.py  claude_cli.py  cli_json.py  codex_cli.py  cursor_cli.py  demo_replay.py  gemini_cli.py  mock.py
docs/: index.html  orchestrator-pseudocode.md  phase-2-notes.md  phase-3-notes.md  phase-4-notes.md  phase-5-notes.md
eval/: README.md
examples/auth-rescue/: .env.example  README.md  agent-rules.md  backlog.json  mission.md  (+1 more)
missions/: README.md
prompt_templates/: research-prompt.md  system-prompt.md
research/: TEMPLATE.md  task-003.md
runtime/: budget-state.json  config.example.json  events.jsonl  task-bundle-template.md
scripts/: make-demo-media.sh
tasks/: task.schema.json
templates/: monorepo-stack.json  node-stack.json  python-stack.json
tests/: test_codex_cli.py  test_demo_replay.py  test_gemini_cli.py  test_orchestrator.py
(+37 files in other folders)
